feat: implementa paginação offset e cursor